# MIDAS

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  build_midasdb.sh  conda_env.yml  iggtools.yml  midas.yml  midas2.yml  setup.cfg  setup.py
conda_recipe/: meta.yaml
docker-builds/: Makefile  template.yml
docker-builds/midas/: Dockerfile
docker-builds/midas2.0/: Dockerfile
docker-builds/midasdb/: Dockerfile
docs/: acknowledgements.rst  advanced_topics.rst  cnv_module.rst  conf.py  download_midasdb.rst  example_questions.rst  glossary.rst  index.rst  installation.rst  output.rst  overview.rst  quickstart.rst  snv_module.rst  species_module.rst
hacks/: build_marker_db.py  pipeline_pangenome.sh  run_hmm.sh  run_prodigal.sh  run_uclust.sh  store_gene_info.py  write_genes.py
iggtools/: __init__.py  __main__.py
iggtools/common/: __init__.py  argparser.py  bowtie2.py  samples.py  snvs.py  utilities.py  utility.py  utils.py
iggtools/models/: __init__.py  midasdb.py  pool.py  sample.py  samplepool.py  species.py  uhgg.py
iggtools/params/: __init__.py  batch.py  inputs.py  outputs.py  schemas.py
iggtools/subcommands/: __init__.py  annotate_genes.py  annotate_genome.py  aws_batch_init.py  aws_batch_submit.py  build_bowtie2_indexes.py  build_bowtie2db.py  build_gene_features.py  build_marker_genes.py  build_markerdb.py  build_midasdb.py  build_pangenome.py  collate_repgenome_markers.py  collate_repgenomes.py  compute_chunks.py  download_midasdb.py  example_a.py  example_b.py  example_subcommand.py  generate_dbmisc.py  import_uhgg.py  infer_markers.py  init.py  midas_merge_genes.py  midas_merge_snps.py  midas_merge_species.py  midas_run_genes.py  midas_run_snps.py  midas_run_species.py  prodigal.py  prokka.py
midas/: __init__.py  __main__.py
midas/common/: argparser.py  bowtie2.py  snvs.py  utilities.py  utils.py
midas/models/: midasdb.py  sample.py  samplepool.py  species.py
midas/params/: __init__.py  batch.py  inputs.py  outputs.py
midas/subcommands/: __init__.py  annotate_genome.py  annotate_pangenome.py  augment_pangenome.py  aws_batch_init.py  aws_batch_submit.py  build_bowtie2db.py  build_midasdb.py  build_pangenome.py  compute_chunks.py  database.py  enhance_pangenome.py  example_subcommand.py  import_genome.py  init.py  (+10 more)
midas2/: __init__.py  __main__.py
tests/: build_midasdb.sh  midas2.yml  midas2_analysis.sh  midas2_database.sh  run_midas.sh  run_tests.sh  samples.txt  samples_list.tsv  test_analysis.sh  test_db.sh
(+322 files in other folders)
