[metadata]
name = midas2
summary = Metagenomic Intra-Species Diversity Analysis System 2.0 (MIDAS 2.0)
author = Chunyu Zhao and Boris Dimitrov
author_email = chunyu.zhao@czbiohub.org
license = MIT
home_page = https://github.com/czbiohub/MIDAS2.0/wiki/3.-MIDAS-2.0
project_urls =
    Bug Tracker = https://github.com/czbiohub/MIDAS2.0/issues
    Documentation = https://github.com/czbiohub/MIDAS2.0/wiki/2.-Quickstart
    Source Code = https://github.com/czbiohub/MIDAS2.0
classifier =
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
keywords =
    strain-level
    metagenomics
    pangenome
    MIDAS
