[metadata]
name = midas2
summary = Metagenomic Intra-Species Diversity Analysis System 2 (MIDAS2)
author = Chunyu Zhao and Boris Dimitrov
author_email = chunyu.zhao@czbiohub.org
license = MIT
home_page = https://github.com/czbiohub/MIDAS2
project_urls =
    Bug Tracker = https://github.com/czbiohub/MIDAS2/issues
    Documentation = https://midas2.readthedocs.io/en/latest/#
    Source Code = https://github.com/czbiohub/MIDAS2
classifier =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
keywords =
    strain-level
    metagenomics
    pangenome
    MIDAS
