[metadata]
name = midas
summary = Metagenomic Intra-Species Diversity Analysis System Version 3 (MIDAS v3)
author = Chunyu Zhao and Boris Dimitrov
author_email = chunyu.zhao@czbiohub.org
license = MIT
home_page = https://github.com/czbiohub/MIDAS
project_urls =
    Bug Tracker = https://github.com/czbiohub/MIDAS/issues
    Documentation = https://midas2.readthedocs.io/en/latest/#
    Source Code = https://github.com/czbiohub/MIDAS
classifier =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
keywords =
    strain-level
    metagenomics
    pangenome
    genotyping
    MIDAS
